Fix line breaks on dixit. Give minor opacity to modal.

--- a/src/components/OptionButton/OptionButton.css
+++ b/src/components/OptionButton/OptionButton.css
@@ -39,7 +39,7 @@
 
 .secondary:hover {
   background-color: transparent;
-  border-color: var(--font-accent-color) !important;
+  border-color: var(--font-accent-color);
 }
 
 .secondary:active {
