--- a/src/pages/Postgame/components/Modal/Modal.css
+++ b/src/pages/Postgame/components/Modal/Modal.css
@@ -5,7 +5,10 @@
   max-height: calc(100vh - 40px);
   overflow: hidden;
   position: relative;
+  width: 100%;
   z-index: 100;
+  margin: 2rem;
+  opacity: 0.9;
 }
 
 .modal-body {
